<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="400dp"
    android:orientation="vertical"
    android:clickable="true"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/meal_detail_image"
            android:layout_width="@dimen/list_item_image_size"
            android:layout_height="@dimen/list_item_image_size"
            android:contentDescription="@string/overview_meal_photo_description"
            android:transitionName="overview-shared-view-image"
            tools:src="@drawable/ic_fork_and_knife_positive"
            tools:targetApi="lollipop" />

        <android.support.v4.widget.Space
            android:layout_width="4dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/meal_detail_name"
            style="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textIsSelectable="false"
            android:textSize="@dimen/ingredient_detail_title_size"
            tools:text="Example meal name" />

        <Space
            android:layout_width="8dp"
            android:layout_height="0dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/meal_detail_date"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/meal_detail_energy_count"
                android:layout_alignRight="@+id/meal_detail_energy_count"
                android:textIsSelectable="false"
                android:textSize="12sp"
                tools:text="23:56:31" />

            <TextView
                android:id="@+id/meal_detail_energy_count"
                style="@style/Base.TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="?colorAccent"
                android:textIsSelectable="false"
                android:textSize="16sp"
                tools:text="160 kcal" />
        </RelativeLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/meal_detail_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never"
        tools:listitem="@layout/meal_detail_ingredient_item">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        style="@style/Widget.AppCompat.ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/meal_detail_remove"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:contentDescription="@string/overview_meal_remove_description"
            app:srcCompat="@drawable/ic_delete_24px" />

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/meal_detail_copy"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:contentDescription="@string/overview_meal_copy_description"
            app:srcCompat="@drawable/ic_content_copy_black_24dp" />

        <ImageButton
            android:id="@+id/meal_detail_edit"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/overview_meal_edit_description"
            app:srcCompat="@drawable/ic_edit_24px" />

    </LinearLayout>
</LinearLayout>