<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/overview_extended_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    app:cardElevation="24dp"
    app:cardUseCompatPadding="true"
    tools:context=".activities.mealdetail.view.MealDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="400dp"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/overview_extended_image"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:transitionName="overview-shared-view-image"
                android:contentDescription="@string/overview_meal_photo_description"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_fork_and_knife_wide" />
        </android.support.v7.widget.CardView>
        <Space
            android:layout_width="match_parent"
            android:layout_height="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/overview_extended_name"
                style="@style/Base.TextAppearance.AppCompat.Body2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textIsSelectable="false"
                android:textSize="@dimen/ingredient_detail_title_size"
                tools:text="Example meal name" />
            <android.support.v4.widget.Space
                android:layout_width="8dp"
                android:layout_height="0dp" />
            <TextView
                android:id="@+id/overview_extended_date"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textIsSelectable="false"
                android:textSize="12sp"
                android:layout_gravity="center"
                tools:text="23:56:31" />
        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <TextView
            android:id="@+id/overview_extended_energy_count"
            style="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?colorAccent"
            android:textIsSelectable="false"
            android:textSize="18sp"
            tools:text="160 kcal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/overview_extended_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:listitem="@layout/overview_extended_ingredient_item">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/overview_extended_remove"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:contentDescription="@string/overview_meal_remove_description"
                android:src="@drawable/ic_delete_24px" />

            <ImageButton
                android:id="@+id/overview_extended_edit"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/overview_meal_edit_description"
                android:src="@drawable/ic_edit_24px" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>